# Learning-Rust

./: .gitignore  Cargo.toml  README.md
First_rust_code/: main.rs
code_camp_course/: Cargo.toml
code_camp_course/src/: main.rs
code_camp_course/src/exercises/: basic_http_example.rs  basic_types_exercises.rs  mod.rs  ownership_and_borrowing_exercises.rs  variables_exercises.rs
console_input/src/: main.rs
data_types/src/: main.rs
first_rust_code/: Cargo.toml
first_rust_code/src/: main.rs
guessing_game/src/: main.rs
mutability/src/: main.rs
random_exemples/: Cargo.toml
random_exemples/src/: main.rs
src/: main.rs
type_casting_plus_arithmetic/: Cargo.toml
type_casting_plus_arithmetic/src/: main.rs
